<resources>

    <string name="ab_cancel">Cancel</string>
    <string name="ab_createTask">Add</string>
    <string name="ab_submit">Submit task</string>
    <string name="ab_syncTasks">Sync tasks</string>
    <string name="app_name">Taskwarrior</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_unsaved_data">Dismiss task?</string>
    <string name="dialog_delete_task">Permanently delete task?</string>
    <string name="done">Done</string>
    <string name="dueDate">Due date</string>
    <string name="duedate">Due</string>
    <string name="dueTime">Due time</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="error_message_unable_read_storage">Unable to read to external storage. Disable USB mass storage mode to use Taskwarrior.</string>
    <string name="lb_date">Date</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_done">Done</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_settings">Settings</string>
    <string name="notification_title">\u0020tasks due</string>
    <string name="notification_content_text">\u0020tasks needs to be done today.</string>
    <string name="no_project">no project</string>
    <string name="ok">OK</string>
    <string name="pager_title_projects">Projects</string>
    <string name="pager_title_filter">Filter</string>
    <string name="priority">Priority</string>
    <string name="project">Project</string>
    <string name="set">Set</string>
    <string name="setDate">Pick a date</string>
    <string name="setPriority">Set priority</string>
    <string name="setProject">Set a project</string>
    <string name="setTag">Set a tag</string>
    <string name="setTime">Pick a time</string>
    <string name="status">Status</string>
    <string name="recur">Recurring</string>
    <string name="recur_norecur">no recurring</string>
    <string name="recur_userdefined">user-defined</string>
    <string name="recur_daily">daily</string>
    <string name="recur_weekly">weekly</string>
    <string name="recur_biweekly">biweekly</string>
    <string name="recur_monthly">monthly</string>
    <string name="recur_quartarly">quartarly</string>
    <string name="recur_semiannual">semiannual</string>
    <string name="recur_annual">annual</string>
    <string name="recur_biannual">biannual</string>
    <string name="tags">Tags</string>
    <string name="task">Task</string>
    <string name="task_action_done">Task done:</string>
    <string name="task_action_delete">Task deleted:</string>
    <string name="task_action_reminder">Successfully added a reminder.</string>
    <string name="task_all">All</string>
    <string name="task_delete">delete</string>
    <string name="task_done">task done</string>
    <string name="task_long">Long</string>
    <string name="task_modify">modify</string>
    <string name="task_newest">Newest</string>
    <string name="task_next">Next</string>
    <string name="task_oldest">Oldest</string>
    <string name="task_reminder">Reminder</string>
    <string name="task_selected">Task selected</string>
    <string name="task_wait">Wait</string>
    <string name="title_activity_main">Taskwarrior</string>
    <string name="title_activity_task_add">Add Task</string>
    <string name="title_task_counter">\u0020Tasks</string>
    <string name="tvTaskDescription">Task Description</string>
    <string name="typeTask">task add …</string>
    <string name="valid_description">A task must have a description.</string>
    <string name="task_added">Task added</string>

    <string-array name="recurring_list">
        <item>@string/recur_norecur</item>
        <item>@string/recur_userdefined</item>
        <item>@string/recur_daily</item>
        <item>@string/recur_weekly</item>
        <item>@string/recur_biweekly</item>
        <item>@string/recur_monthly</item>
        <item>@string/recur_quartarly</item>
        <item>@string/recur_semiannual</item>
        <item>@string/recur_annual</item>
        <item>@string/recur_biannual</item>
    </string-array>
    <string-array name="priority_list">
        <item>no priority</item>
        <item>High</item>
        <item>Middle</item>
        <item>Low</item>
    </string-array>
    <string-array name="reports">
        <item>@string/task_next</item>
        <item>@string/task_long</item>
        <item>@string/task_all</item>
        <item>@string/task_wait</item>
        <item>@string/task_newest</item>
        <item>@string/task_oldest</item>
    </string-array>

</resources>