<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvTaskDescription"
            style="@style/listViewHeaderItem"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/tvTaskDescription" />

        <EditText
            android:id="@+id/etTaskAdd"
            style="@style/listViewItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tvTaskDescription"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/typeTask" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvDueDateStatic"
            style="@style/listViewHeaderItem"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/etTaskAdd"
            android:text="@string/dueDate" />

        <TextView
            android:id="@+id/tvDueDate"
            style="@style/Dropdown.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvDueDateStatic"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@+id/tvDueTime"
            android:gravity="center"
            android:hint="@string/setDate" />

        <TextView
            android:id="@+id/tvDueTime"
            style="@style/Dropdown.TextView"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tvDueDateStatic"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:hint="@string/setTime" />

        <TextView
            android:id="@+id/tvRecurStatic"
            style="@style/listViewHeaderItem"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvDueTime"
            android:text="@string/recur" />

        <TextView
            android:id="@+id/tvRecurring"
            style="@style/Dropdown.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvRecurStatic"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="8dp"
            android:hint="@string/setRecurring" />

        <TextView
            android:id="@+id/tvProjectStatic"
            style="@style/listViewHeaderItem"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvRecurring"
            android:text="@string/project" />

        <AutoCompleteTextView
            android:id="@+id/actvProject"
            style="@style/listViewItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvProjectStatic"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:completionThreshold="1"
            android:hint="@string/setProject"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tvPriorityStatic"
            style="@style/listViewHeaderItem"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/actvProject"
            android:text="@string/priority" />

        <Spinner
            android:id="@+id/spPriority"
            style="@style/listViewItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPriorityStatic"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:entries="@array/priority_list" />

        <TextView
            android:id="@+id/tvTagsStatic"
            style="@style/listViewHeaderItem"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/spPriority"
            android:text="@string/tags" />

        <EditText
            android:id="@+id/etTags"
            style="@style/listViewItem"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvTagsStatic"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/setTag"
            android:singleLine="true" />
    </RelativeLayout>

</ScrollView>